<resources>
    <string name="app_name">AdditionCalculator</string>
    <string name="errorMessageNoInput">Please enter a number.</string>
    <string name="errorMessageNumberTooBig">The numbers you have entered are too mighty for this simple calculator! Use smaller numbers.</string>
    <string name="logIntExceptionMessage">EXCEPTION DETECTED, STRING TO INTEGER FAILED, NUMBER TOO BIG</string>
    <string name="logButtonTriggerMessage">BUTTON WAS CLICKED.</string>
    <string name="emptyResult">0</string>
    <string name="first_number">First number</string>
    <string name="second_number">Second number</string>
    <string name="calculate">Calculate</string>
    <string name="result">Result</string>
    <string name="signatureText">Addition Calculator application written by Christoph Szabo for Dorset College, Mobile Apps 1 - BSC20920</string>
    <string name="todo">TODO</string>
</resources>