<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".MainActivity"
    tools:ignore="LabelFor"
    >

    <TextView
        android:id="@+id/textView_answer"
        android:layout_width="@dimen/textViewWidth"
        android:layout_height="@dimen/textViewHeight"
        android:layout_marginStart="36dp"
        android:layout_marginTop="108dp"
        android:text="@string/emptyResult"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_second_no" />

    <EditText
        android:id="@+id/editText_first_no"
        android:layout_width="@dimen/editTextWidth"
        android:layout_height="@dimen/editTextHeight"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="36dp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView_first_no"
        android:layout_width="@dimen/textViewWidth"
        android:layout_height="@dimen/textViewHeight"
        android:layout_marginTop="176dp"
        android:text="@string/first_number"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/editText_first_no"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_second_no"
        android:layout_width="@dimen/textViewWidth"
        android:layout_height="@dimen/textViewHeight"
        android:layout_marginTop="36dp"
        android:text="@string/second_number"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/editText_second_no"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_first_no" />

    <EditText
        android:id="@+id/editText_second_no"
        android:layout_width="@dimen/editTextWidth"
        android:layout_height="@dimen/editTextHeight"
        android:layout_marginEnd="36dp"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_first_no"
        app:layout_constraintVertical_bias="0.044"
        android:autofillHints="" />

    <Button
        android:id="@+id/calcButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="56dp"
        android:text="@string/calculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_answer" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="@dimen/textViewWidth"
        android:layout_height="@dimen/textViewHeight"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="8dp"
        android:text="@string/result"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_answer"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="339dp"
        android:layout_height="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/signatureText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iconImage"
        android:layout_width="151dp"
        android:layout_height="137dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        tools:ignore="VectorDrawableCompat" />


</androidx.constraintlayout.widget.ConstraintLayout>